@@ -1,6 +1,8 @@
 2009-12-13  Marcus Meissner  <marcus@jet.franken.de>
 
 	* config.c: Mark readonly widgets as readonly
+	* library.c: make timeout code the same for all functions,
+	  fixed canon capture timeouts.
 
 2009-12-06  Laurent Calmes <lcalmes@users.sourceforge.net>
 
